app-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-1
  namespace: app
spec:
  selector:
    app: backend-1
  ports:
  - port: 5678
    targetPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: backend-2
  namespace: app
spec:
  selector:
    app: backend-2
  ports:
  - port: 5678
    targetPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: app
spec:
  selector:
    app: database
  ports:
  - port: 6379
    targetPort: 6379
